--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<h1> This is static application for jenkins demo by Sarath Jnana</h1>
+<h1> This is static application for jenkins demo by "M J Sarath Kumar</h1>
